# learning-cmake

./: CMakeLists.txt  README.md  start_build.sh
libs/MyLibrary/: CMakeLists.txt
libs/MyLibrary/include/: LibraryHeader.h
libs/MyLibrary/src/: Library.cpp
src/: Main.cpp
